--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "private": true,
   "dependencies": {
     "@midwayjs/bootstrap": "^3.12.0",
-    "@midwayjs/core": "^3.12.0",
+    "@midwayjs/core": "^3.16.2",
+    "@midwayjs/decorator": "^3.16.2",
     "@midwayjs/info": "^3.12.0",
-    "@midwayjs/koa": "^3.12.0",
+    "@midwayjs/koa": "^3.16.8",
     "@midwayjs/logger": "^3.1.0",
-    "@midwayjs/validate": "^3.12.0"
+    "@midwayjs/typeorm": "^3.16.5",
+    "@midwayjs/validate": "^3.12.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.11.0",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@midwayjs/mock": "^3.12.0",
