--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@midwayjs/bootstrap": "^3.12.0",
     "@midwayjs/core": "^3.16.2",
+    "@midwayjs/cross-domain": "^3.16.8",
     "@midwayjs/decorator": "^3.16.2",
     "@midwayjs/info": "^3.12.0",
     "@midwayjs/koa": "^3.16.8",
