--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@midwayjs/logger": "^3.1.0",
     "@midwayjs/typeorm": "^3.16.5",
     "@midwayjs/validate": "^3.12.0",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@midwayjs/mock": "^3.12.0",
     "@types/jest": "^29.2.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "14",
     "cross-env": "^6.0.0",
     "jest": "^29.2.2",
