--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@midwayjs/bundle-helper": "^1.3.0",
     "@midwayjs/mock": "^3.12.0",
     "@types/jest": "^29.2.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "14",
+    "@vercel/ncc": "^0.38.1",
     "cross-env": "^6.0.0",
     "jest": "^29.2.2",
     "mwts": "^1.3.0",
@@ -43,7 +45,9 @@
     "lint:fix": "mwts fix",
     "format": "prettier --write .",
     "ci": "npm run cov",
-    "build": "mwtsc --cleanOutDir"
+    "build": "mwtsc --cleanOutDir",
+    "bundle": "bundle && npm run build && ncc build bootstrap.js -o build",
+    "bundle_start": "NODE_ENV=production node ./build/index.js"
   },
   "repository": {
     "type": "git",
